project page is ready to deploy

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,6 +10,7 @@ html {
   font-family: var(--font-Preahvihear), sans-serif;
    scroll-behavior: smooth;
 }
-/* Makes blur smoother and more like macOS */
 
-
+html, body {
+  overflow-x: hidden;
+}
